<resources>
    <string name="APNs_Child_Unbind">Device %s has canceled the binding.</string>
    <string name="APNs_New_Notification">Received notification from device %s</string>
    <string name="Account_Confirm_Password">Confirm</string>
    <string name="Account_Password_Different">"The passwords don't match"</string>
    <string name="Account_Password_Placeholder">Please enter password</string>
    <string name="Account_PrivacyPolicy_Cancel">放弃并退出</string>
    <string name="Account_PrivacyPolicy_Content" formatted="false">感谢您信任并使用%s，我们非常重视您的隐私保护和个人信息保护，请您在使用前认真阅读%s提供的&lt;a href=\"cn_eula\">《用户条款》&lt;/a>及&lt;a href=\"cn_policy\">《隐私政策》&lt;/a>全部条款。对于您需要重点注意的内容，例如使用本产品会调用的权限及对应用途，以及您使用本产品时享有的权利等，我们已经在协议中进行了重点标注，建议您在操作前仔细阅读。&lt;br/>如您同意上述条款，请点击“同意并继续”开始使用我们的产品及服务。若点击“放弃并退出”，将无法使用我们的产品和服务，并退出本App。</string>
    <string name="Account_PrivacyPolicy_Continue">同意并继续</string>
    <string name="Account_PrivacyPolicy_Title">欢迎使用%s客户端</string>
    <string name="Account_Reset_Succ_Return">Back to sign in</string>
    <string name="Account_Reset_Succ_Text">Please check your inbox for password reset link</string>
    <string name="Account_Reset_Succ_Title">Email sent</string>
    <string name="Account_Reset_Text">Please enter your account email to receive the password reset link</string>
    <string name="Account_Signin_Button">Sign in</string>
    <string name="Account_Signin_PwdIncorrect">Password incorrect</string>
    <string name="Account_Signin_ServerMaintenance">Server under maintenance</string>
    <string name="Account_Signup_AccountExists">Account already exists</string>
    <string name="Account_Signup_Button">Sign up</string>
    <string name="Account_Signup_Emoji_NotAllow">Emoticons not allowed</string>
    <string name="Account_Signup_Empty">Please complete all required field</string>
    <string name="Account_Signup_Ing">Signing up</string>
    <string name="Account_Signup_NicknamePatternWrong">Nickname format is incorrect or contains restricted characters</string>
    <string name="Account_Signup_PasswordEmpty">Password cannot be empty</string>
    <string name="Account_Signup_Password_Tip">The password must contain at least 8 characters with mix of letters, number, symbols</string>
    <string name="Account_Signup_Password_Unsafety">Use a mix of letters, number, and symbols in your password</string>
    <string name="Account_Signup_Password_WhiteSpace1">The password cannot contain spaces</string>
    <string name="Account_User_Deleted">Account has been deleted</string>
    <string name="Account_User_Expired">Login expired. Please login again</string>
    <string name="Account_User_Password_Changed">Password has changed, please login again for your account security</string>
    <string name="Account_Verification_Error_Code">Failed to send verification code, try again later</string>
    <string name="Account_Verification_Error_Verify_Expired">The verification code has expired, please re-verify</string>
    <string name="AirDroidParental_chat_entermessage">Send a chat</string>
    <string name="AirDroid_Kids_Not_Installed">AirDroid Kids Not Installed</string>
    <string name="AirMirror_Camera_Failed">Failure to activate remote camera</string>
    <string name="AirMirror_Camera_Failed_Resolution">Failed to activate camera. Exit or allow use of camera on remote devices and tap \"Retry\"</string>
    <string name="AirMirror_Connect_Failed_Resolution">"1. Ensure the network connection of your child's device
2. Awake or unlock your child's device
3. Open AirDroid Kids on your child's device"</string>
    <string name="AirMirror_Connect_Server_Failed">Failed to connect AirDroid Parental Control server</string>
    <string name="AirMirror_Connect_Server_Failed_Resolution">Please check your network connection then try again</string>
    <string name="AirMirror_Connect_Target_Server_Failed_Camera">"Failed to start \"Remote Camera\" due to a connection failure with the child's device. Please:"</string>
    <string name="AirMirror_Connect_Target_Server_Failed_Listening">"Failed to start \"One-way Audio\" due to a connection failure with the child's device. Please:"</string>
    <string name="AirMirror_Connect_Target_Server_Failed_Screenshot">"Failed to start \"Screen Mirroring\" due to a connection failure with the child's device. Please:"</string>
    <string name="AirMirror_Connect_WWAN_Tip">You are using cellular data to access the device, additional data costs may apply, continue?</string>
    <string name="AirMirror_Connecting">Connecting to the device...</string>
    <string name="AirMirror_Connecting_Text">This may take a while, please be patient.</string>
    <string name="AirMirror_SystemPermission_Disabled_Resolution">"Please open AirDroid Kids on your child's device and follow the instructions to enable the corresponding permission"</string>
    <string name="AirMirror_VerifyCode_Failed_Step1">1. Network communication abnormality may cause delay in SMS, if you still do not receive the verification code after 10 minutes, please click again to get the verification code.</string>
    <string name="AirMirror_VerifyCode_Failed_Step2">2. Please check if the phone charge is overdue or the service is suspended, or the system message is hidden.</string>
    <string name="AirMirror_VerifyCode_Get_Failed">"Can't receive the verification code?"</string>
    <string name="AirMirror_Verify_Failed_Step3">"3. If none of the situations above happen and you still can't receive the verification code, please &lt;a href=\"contact_us\">contact us&lt;/a>"</string>
    <string name="AirMirror_WebRTC_NoResponse">Remote devices has stopped work</string>
    <string name="AirMirror_WebRTC_Reconnect_Resolution2">Click \"Retry\" to send request to the device again</string>
    <string name="Alert_repeat_operation_toast">Another family member has already responded to this request</string>
    <string name="Binding_Code_Valid">The code is always vaild</string>
    <string name="Business_Search_Empty">No related items</string>
    <string name="Cast_Refused_Button">Refuse</string>
    <string name="Common_Cancel">Cancel</string>
    <string name="Common_Complete">Done</string>
    <string name="Common_Confirm">OK</string>
    <string name="Common_Downloading">Downloading...</string>
    <string name="Common_Enable_1">Enable</string>
    <string name="Common_FilePush_downloading">Downloading</string>
    <string name="Common_JustNow">Just now</string>
    <string name="Common_Kid_location_time">Last updated:</string>
    <string name="Common_Network_Connect_Failed">Connection failed, please check your network</string>
    <string name="Common_OK">OK</string>
    <string name="Common_OK2">OK</string>
    <string name="Common_Pull_Refresh">Pull to refresh</string>
    <string name="Common_RS_DeviceList_refresh">Failed to refresh, please retry</string>
    <string name="Common_Refresh_Failed">Failed to refresh, please retry</string>
    <string name="Common_Release_Refresh">Release to refresh</string>
    <string name="Common_Set">Set</string>
    <string name="Common_Setting_Unbind_Password">Please enter password</string>
    <string name="Common_Uninstall">Uninstall</string>
    <string name="Common_WaitMicrophoneAuthorize_Tip">Waiting to grant Microphone permission...</string>
    <string name="Common_Warm_Tip">Tips</string>
    <string name="Common_account_delete_tips">The account has been removed</string>
    <string name="Common_account_signin_apincorrect">Account or password error</string>
    <string name="Common_account_verification_code_empty">Please fill Verification Code</string>
    <string name="Common_account_verification_code_input">Enter Verification Code</string>
    <string name="Kid_Home_Downtime">Downtime</string>
    <string name="Kid_NSFW_title">Inappropriate Image Detection</string>
    <string name="Parent_Communicate_Safe_Title">Calls &amp; SMS Monitoring</string>
    <string name="Parent_Device_Remote_Camera_Title">Remote Camera</string>
    <string name="Parent_Device_Screenshot_Title">Screen Mirroring</string>
    <string name="Parent_Device_TodayEvent_Title">"Today's Event"</string>
    <string name="Parent_FamilyMember_Title">Family Members</string>
    <string name="Parent_Keyword_Detect">Social Content Detection</string>
    <string name="Parent_MailSubscribe_Title">Email Subscription</string>
    <string name="Parent_Permission_Accessibility_Not_Auth">"You haven't granted permission to Accessibility on the child's device"</string>
    <string name="Parent_Permission_App_And_Notification">App list and notifications</string>
    <string name="Parent_Permission_Device_Manager">Device Info Update</string>
    <string name="Parent_Permission_Location">Real-time Location</string>
    <string name="Parent_Permission_Location_No_Auth">"You haven't granted permission to device location on the child's device."</string>
    <string name="Parent_Permission_Microphone_No_Auth">"You haven't granted permission to microphone on the child's device."</string>
    <string name="Parent_Permission_ScreenMirror_No_Auth">"You haven't granted permission to screenshot on the child's device."</string>
    <string name="Parent_Permission_Track">Route History</string>
    <string name="Parent_Safe_Browser_Feature_Content_Filter">Content Filtering</string>
    <string name="Parent_Safe_Browser_Feature_Content_Filter_Desc">Block harmful internet content and sites, such as adult websites, violent content, etc., to keep your child safe online.</string>
    <string name="Parent_Safe_Browser_Feature_History">History Tracking</string>
    <string name="Parent_Safe_Browser_Feature_History_Desc">"Parents can view their child's browsing history, and block websites from it."</string>
    <string name="Parent_Safe_Browser_Feature_Keyword">URL Blacklist and Whitelist</string>
    <string name="Parent_Safe_Browser_Feature_Keyword_Desc">"Set up URL blacklist and whitelist to easily manage your child's access."</string>
    <string name="Parent_Safe_Browser_Feature_Remote">Remote Browser Management</string>
    <string name="Parent_Safe_Browser_Feature_Remote_Desc">"You can configure and apply browser rules in AirDroid Parental Control to the AirDroid Browser on your child's device."</string>
    <string name="Parent_Setting_About">About Us</string>
    <string name="Parent_Setting_Feedback">Feedback</string>
    <string name="Parent_Setting_My_Devices">"Child's Devices"</string>
    <string name="Parent_Setting_My_Recordings">My Recordings</string>
    <string name="Parent_Tabbar_Device_Title">Device</string>
    <string name="Parent_Tabbar_My_Title">My</string>
    <string name="Parent_UsageLimit_AlwaysAllow_Title">Always Allowed</string>
    <string name="Parent_UsageLimit_AppTime_Title">App Limits</string>
    <string name="Parent_UsageLimit_Forbid_All_Title">Instant Block</string>
    <string name="Parent_UsageLimit_Title">Usage Limits</string>
    <string name="Parent_WebsiteRestrictions_title">Website Limits</string>
    <string name="Parental_ControlPassword_Title">Admin Code</string>
    <string name="Parental_Device_Browser">Website Restrictions</string>
    <string name="Parental_Device_Supervised_Title">Device Supervision</string>
    <string name="Parental_Device_System_Limit">App &amp; Content Restrictions</string>
    <string name="Parental_Tabbar_AI_Title">Assistant</string>
    <string name="Payment_Sub_Will_Expire">Expiration: %s</string>
    <string name="Payment_Subscribe">Subscription</string>
    <string name="Payment_Trial">Free Trial</string>
    <string name="Profile_Help">Help</string>
    <string name="kid_list_listen_title">One-Way Audio</string>
    <string name="parent_about_rate">Rate Us</string>
    <string name="parent_family_message">Family</string>
    <string name="parent_redeem_title">Redeem a Code</string>
    <string name="pc_biz_intro_feature4_title">Geofencing</string>
    <string name="schedule_titile">Schedule</string>
</resources>