<?xml version="1.0" encoding="utf-8"?>
<com.sand.airdroidkidp.ui.custom.ClipBackgroundConstraintLayout
    android:background="@drawable/parent_profile_background"
    android:paddingTop="4.0dip"
    android:paddingBottom="4.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="4.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemAirDroid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_free_trial"
        app:isShowDivider="false"
        app:layout_constraintTop_toTopOf="parent"
        app:mainText="@string/Payment_Sub_Will_Expire"
        app:mode="3"
        app:subText="@string/Payment_Subscribe"
        app:title="@string/Payment_Trial" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemFamily"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_family"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemAirDroid"
        app:mode="1"
        app:title="@string/Parent_FamilyMember_Title" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemSubscribeMail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_email"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemFamily"
        app:mode="1"
        app:title="@string/Parent_MailSubscribe_Title" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemDevice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_device_kids"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemSubscribeMail"
        app:mode="1"
        app:subText="3"
        app:title="@string/Parent_Setting_My_Devices" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemAudioRecording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_microphone"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemDevice"
        app:mode="1"
        app:title="@string/Parent_Setting_My_Recordings" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemControlPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/icon_password"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemAudioRecording"
        app:title="@string/Parental_ControlPassword_Title" />
</com.sand.airdroidkidp.ui.custom.ClipBackgroundConstraintLayout>