<?xml version="1.0" encoding="utf-8"?>
<com.sand.airdroidkidp.ui.custom.ClipBackgroundConstraintLayout
    android:background="@drawable/parent_profile_background"
    android:paddingTop="4.0dip"
    android:paddingBottom="4.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="4.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemRedeem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/gift"
        app:iconTint="@color/black_282930"
        app:isShowDivider="false"
        app:layout_constraintTop_toTopOf="parent"
        app:mode="1"
        app:title="@string/parent_redeem_title" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemRate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_score"
        app:iconTint="@color/black_282930"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemRedeem"
        app:mode="1"
        app:title="@string/parent_about_rate" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemHelp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_help"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemRate"
        app:mode="1"
        app:title="@string/Profile_Help" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_about_svg"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemHelp"
        app:mode="1"
        app:subText=""
        app:title="@string/Parent_Setting_About" />
    <com.sand.airdroidkidp.ui.custom.ProfileItemPreference
        android:id="@id/itemFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_feedback_svg"
        app:isShowDivider="false"
        app:layout_constraintTop_toBottomOf="@id/itemAbout"
        app:mode="1"
        app:title="@string/Parent_Setting_Feedback" />
</com.sand.airdroidkidp.ui.custom.ClipBackgroundConstraintLayout>